# cpal

./: Cargo.toml
mediakit-sys/: Cargo.toml  build.rs
mediakit-sys/mediakit-link/: wrapper.h
src/host/: mod.rs
src/host/mediakit/: mod.rs
src/platform/: mod.rs
